deploy.yaml
---
apiVersion : apps/v1
kind: Deployment
metadata:
  labels:
    app: nodejspractice
  name: nodejspractice
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nodejspractice
  template:
    metadata:
      labels:
        app: nodejspractice 
    spec:
      containers:
      - name: nodejspractice
        image: erikortizax/nodejspractice:0.0.1
        imagePullPolicy: Always
        resources:
          limits:
            cpu: 200m
            memory: 256Mi
          requests:
            cpu: 100m
            memory: 128Mi
        ports:
        - containerPort: 3001
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: nodejspractice
  name: nodejspractice
spec:
  # type: LoadBalancer
  ports:
  - port: 3001 #puerto interno
    protocol: TCP
    targetPort: 3001 #puesto externo
  selector:
    app: nodejspractice
---
apiVersion : apps/v1
kind: Deployment
metadata:
  labels:
    app: java
  name: java
spec:
  replicas: 1
  selector:
    matchLabels:
      app: java
  template:
    metadata:
      labels:
        app: java
    spec:
      containers:
      - name: java
        image: erikortizax/arquetipojava:latest
        imagePullPolicy: Always
        resources:
          limits:
            cpu: 200m
            memory: 256Mi
          requests:
            cpu: 100m
            memory: 128Mi
        ports:
        - containerPort: 8090
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: java
  name: java
spec:
  # type: LoadBalancer
  ports:
  - port: 8090
    protocol: TCP
    targetPort: 8090
  selector:
    app: java
---
